# Sunder

./: CONTRIBUTING.md  README.md  package-lock.json  package.json  tsconfig.json
.agents/rules/: git-context-guard.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
src/: App.svelte
src-tauri/: Cargo.toml  build_output.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  lib.rs  main.rs  models.rs
src-tauri/src/audio/: art_worker.rs  engine.rs  equalizer.rs  mod.rs  state.rs
src-tauri/src/db/: cache.rs
src-tauri/src/extraction/: sidecar.rs
src-tauri/src/ipc/: commands.rs
src/lib/components/: ContextMenu.svelte  Explore.svelte  FocusView.svelte  LyricsView.svelte  Player.svelte  PlaylistView.svelte  QueueView.svelte  SearchBar.svelte  Sidebar.svelte  SleepTimer.svelte  Toast.svelte  TrackList.svelte
src/lib/ipc/: bridge.ts
src/lib/state/: config.svelte.ts  lyrics.svelte.ts  nav.svelte.ts  player.svelte.ts  toast.svelte.ts
src/lib/types/: index.ts
