[package]
name = "sunder"
version = "0.1.0"
edition = "2021"

[lib]
name = "sunder_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[[bin]]
name = "sunder"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "process", "io-util"] }
rodio = { version = "0.19", default-features = false, features = ["symphonia-mp3", "symphonia-isomp4", "symphonia-aac", "symphonia-vorbis", "symphonia-flac", "symphonia-wav"] }
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
